src/Release/schrac.log
2015/02/13 17:28:37 にビルドを開始しました。
     1>ノード 2 上のプロジェクト "D:\DATA\PROGRAM\Repos\schrac\src\schrac.vcxproj" (Build ターゲット)。
     1>ClCompile:
         C:\Program Files (x86)\Intel\Composer XE 2015\bin\ia32\icl.exe /c /Qvc12 /Qlocation,link,"C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\bin" /Zi /nologo /W3 /O3 /Ob1 /Oi /Ot /Oy /GT /Qipo /GA /Qftz /Qparallel /D __INTEL_COMPILER=1500 /D _MBCS /EHsc /MT /GS /Gy /Zc:wchar_t /Zc:forScope /Qstd=c++11 /Fo"Release\\" /Fd"Release\vc120.pdb" /Gd /TP vhartree.cpp
         vhartree.cpp
     1>vhartree.cpp(14): error : 式にクラス型が含まれていなければなりません。
                   acc(gsl_interp_accel_alloc(). gsl_interp_accel_deleter),
                       ^
         
         コンパイルは vhartree.cpp で異常終了しました (コード 2)。
     1>プロジェクト "D:\DATA\PROGRAM\Repos\schrac\src\schrac.vcxproj" (Build ターゲット) のビルドが終了しました -- 失敗。

ビルドに失敗しました。

経過時間 00:00:01.01
